# PAI_GalaxyZoo

./: .gitignore  1_ClassificationQ1.py  2_RegressionQ2Q7.py  3_RegressionQ6Q8.py  README.md  config_default.yaml  evaluate.py  exercise_1.py  exercise_2.py  exercise_3.py  pyproject.toml  regression.py  train.py
galaxy_classification/: __init__.py  data.py  utils.py
